--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,3 +1,8 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
 body {
   padding: 0;
   margin: 0;
@@ -8,6 +13,7 @@ body {
   --light-gray: #f5f5f5;
   --shadow-default-color: #ccc;
   --default-shadow: 0 0 8px 0 var(--shadow-default-color);
+  --shadow-45deg: 2px 2px 5px 0 var(--shadow-default-color);
 }
 
 .-scrollbar::-webkit-scrollbar {
